--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="Theme.SHF" parent="android:Theme.Material.NoActionBar">
+        <item name="android:navigationBarColor">@android:color/background_dark</item>
         <item name="android:statusBarColor">@android:color/background_dark</item>
     </style>
 
